[workspace]
members = [
    "druid",
    "druid-shell",
    "druid-derive",
    "docs/book_examples",
    "druid/examples/web",
    "druid/examples/hello_web",
]
default-members = [
    "druid",
    "druid-shell",
    "druid-derive",
]

[patch.crates-io]
piet-common = { version = "0.2", features = ["png"], git = "https://github.com/linebender/piet.git", rev = "1e2ca51" }
