[workspace]
members = [
    "druid",
    ####////"druid-shell",
    "druid-derive",
    ####////"docs/book_examples",
    ####////"druid/examples/web",
    ####////"druid/examples/hello_web",
    "druid-app", ####////
]
default-members = [
    "druid",
    ####////"druid-shell",
    "druid-derive",
    "druid-app", ####////
]
